fixed z-index, position toast

--- a/src/index.css
+++ b/src/index.css
@@ -106,7 +106,7 @@
         inset: 0;
         justify-content: center;
         position: fixed;
-        z-index: 999999999;
+        z-index: 1000;
     }
 
     .modal-mask {
